# Voltis

./: CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SPEC_LICENSE.md  Voltis_Whitepaper_and_Toolchain_Plan.md
compiler/: README.md
docs/: architecture.md  examples.md  whitepaper.md
docs/spec/: README.md  backend.md  control_flow.md  conversions.md  syntax.md  types.md
examples/: advanced_control_flow.vlt  control_flow.vlt  conversions.vlt  hello.generated.cpp  hello.vlt  windows_api.vlt
src/: ast.h  backend.h  backend_llvm_ir.cpp  backend_llvm_ir.h  backend_pe_x64.cpp  backend_pe_x64.h  codegen.cpp  codegen.h  diagnostics.cpp  diagnostics.h  import_utils.h  lexer.cpp  lexer.h  linker_model.h  lowering.cpp  lowering.h  main.cpp  parser.cpp  parser.h  sema.cpp  sema.h  source_location.h  token.h  vir.cpp  vir.h  vir_passes.cpp  vir_passes.h  voltis_runtime.cpp
tests/: CMakeLists.txt  RunVoltisCase.cmake
tests/cases/: module_deep_math_a.vlt  module_deep_math_b.vlt  module_math.vlt  multi_root_helpers.vlt  multi_root_linker_chain_helpers.vlt  multi_root_linker_chain_main.vlt  multi_root_main.vlt  parser_missing_semicolon.vlt  sema_bad_arg_count.vlt  sema_bad_arg_type.vlt  sema_bad_conversion.vlt  sema_bad_round_receiver.vlt  sema_break_outside_loop.vlt  sema_continue_outside_loop.vlt  sema_duplicate_import.vlt  sema_duplicate_symbol.vlt  sema_extern_missing_import.vlt  sema_if_condition_not_bool.vlt  sema_missing_return_path.vlt  sema_nonvoid_return_without_value.vlt  (+28 more)
veps/: VEP-0001-template.md
